          old names kept as deprecated constants in the regina:: namespace.
        - Explicit inequality tests (!=) have been removed, and are now
          automatically generated from equality tests (==) instead.
        - Explicit comparisons (<, <=, >, >=) have been removed, and are now
          automatically generated from the new spaceship operator (<=>).
        - Several build dependencies are gone: Jansson, Popt, CppUnit.
          See the individual sections below for details.
        - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
        - Updated the bundled copy of Normaliz to version 3.10.3 (30 May 2024).
    ENGINE:
        Class AbelianGroup:
            - New routine hash(), which uses the tight encoding.
        Enum Algorithm:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., ALG_BACKTRACK) have been
              renamed as scoped enum values (e.g., Algorithm::Backtrack).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class AngleStructure:
            - The vector constructors are now templated, so that you can pass a
              vector of some type other than regina::Integer.
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class AngleStructures:
            - New routine sort().
        Enum Attachment::OwnershipPolicy:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., OWN_MALLOC) have been
              renamed as scoped enum values (e.g., OwnershipPolicy::OwnMalloc).
              The old names have been kept as deprecated compile-time constants
              in the Attachment class.
        Enum BagComparison: